# dct-utils

./: README.md  pyproject.toml
src/dct_utils/: __init__.py  client.py
tests/: test_client.py
