[project]
name = "dct-utils"
version = "0.1.0"
description = "DCT系统交互工具函数库"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "woody-logger @ git+https://github.com/wangbowen-hub/woody-logger.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dct_utils"]
